Fixed layout issues

--- a/src/views/css/layout.css
+++ b/src/views/css/layout.css
@@ -2,5 +2,4 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
-    height: 100%;
 }
